add pagination - some bug fix
